# TaskManager

./: .gitignore  Cargo.toml  Frame  Frame.py  Process_visual  Process_visual.py  README.md  Read.me2  TaskMngr.spec  main.py  main.rs  sys_info  system_monitor.py
DLL/: test.py
dll2/: Cargo.toml
dll2/src/: lib.rs  lib_2_with_network
main/: Cargo.toml
main/src/: main.rs
test/: GUI_TEST  test.py
