[package]
name = "sys_info_fn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
libc = "0.2"
num_cpus = "1.15"
local_ipaddress = "0.1.2"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi"] }
nvml-wrapper = "0.7"
