[package]
name = "sys_info_fn"
version = "0.1.0"
edition = "2021"

[lib]
name = "sys_info_fn"
crate-type = ["cdylib"]

[dependencies]
sysinfo = "0.29.11"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.9.0"
local-ip-address = "0.5.7"
num_cpus = "1.16.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "processthreadsapi",
    "psapi",
    "handleapi",
    "winnt",
    "minwindef",
    "winerror",
    "iphlpapi",
]

[build-dependencies]
cc = "1.0"
